--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,9 @@
   --secondary-addressdown-color:rgba(255, 255, 255, 0.6);
   --button-hero-color:#188ce8;
   --svg-color: #afb1b8;
+
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
 
 body {
@@ -107,6 +110,7 @@ img {
 
 
 .nav > .list .link {
+  position: relative;
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -116,6 +120,8 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
+
+  transition: color 250ms var(--timing-function);
  }
 
 .nav > .list .link:hover,
@@ -125,6 +131,21 @@ img {
 .nav-site .link.current {
   color: var(--accent-color);
 }
+.nav-site .link.current::after {
+  content: "";
+
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+
+  background-color: var(--accent-color);
+  border-radius: 2px;
+}
+
 
   /* Контакты в хедере */
 .contacts {
@@ -135,7 +156,7 @@ img {
 }
 
 .contacts .item:not(:last-child) {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 .header-mail {
@@ -154,7 +175,7 @@ img {
 
 
 .contacts .link {
-  display: block;
+  display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -164,6 +185,8 @@ img {
   letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--basic-text-color);
+
+ transition: color 250ms var(--timing-function);
 }
 
 .contacts .link:hover,
@@ -181,7 +204,7 @@ img {
 
  
 /* Hero секция */
-/* Паддинги ниже будут удалены, оставлены для визуализации */
+
 
 .hero {
   display: flex;
@@ -243,6 +266,8 @@ background-position: center;
   color: var(--basic-background-color);
 
   cursor: pointer;
+
+  transition: box-shadow 250ms var(--timing-function);
 }
 
 .button-hero:hover,
@@ -276,10 +301,12 @@ background-position: center;
 }
 
 .features-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
   margin-bottom: 30px;
-  padding: 20px 100px;
-  text-align: center;
-
+  border-radius: 4px;
   background-color: var(--team-background-color);
 }
 
@@ -334,6 +361,29 @@ background-position: center;
 .images .list > .item > img {
   display: block;
 }
+
+.images-text {
+  position: relative;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+
+  margin: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  width: 370px;
+  height: 70px;
+
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--basic-background-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 
 
 /* Наша команда */
@@ -399,8 +449,7 @@ background-position: center;
 
 .team-text {
   margin-top: 0;
-  margin-bottom: 0;
-
+  margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.18;
 }
@@ -422,6 +471,8 @@ background-position: center;
   height: 44px;
 
   border-radius: 50%;
+
+  transition: background-color 250ms var(--timing-function);
 }
 
 .social-link:hover,
@@ -431,7 +482,7 @@ background-position: center;
 
 .social-link:hover .social-icon,
 .social-link:focus .social-icon {
-  fill: var(--primary-bg-color);
+  --color4: var(--basic-background-color);
 }
 
 .social-icon,
@@ -439,6 +490,8 @@ background-position: center;
   width: 20px;
   height: 20px;
   fill: var(--svg-color);
+
+  transition: fill 250ms var(--timing-function);
 }
 
 /* Секция Постоянные клиенты */
@@ -451,7 +504,7 @@ background-position: center;
   margin-top: 0;
   margin-bottom: 50px;
 
-  color: var(--second-text-color);
+  color: var(--secondary-text-color);
 
   font-weight: 700;
   font-size: 36px;
@@ -470,12 +523,13 @@ background-position: center;
 
   border: 1px solid var(--svg-color);
   border-radius: 4px;
+
+  transition: border-color 250ms var(--timing-function);
 }
 
-.clients-item:hover,
-.clients-item:focus {
-  border-color: var(--accent-color);
-}
+
+
+
 
 .clients-item:not(:last-child) {
   margin-right: 30px;
@@ -489,23 +543,29 @@ background-position: center;
   height: 90px;
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients-item .clients-link:hover,
+.clients-item .clients-link:focus {
   color: var(--accent-color);
-}
-
-.clients-icon:hover,
-.clients-icon:focus {
   --color4: var(--accent-color);
+  border-color: var(--accent-color);
 }
 
+
+/* линия контура для фокуса  */
+*:focus {
+  outline-width: 2px;
+  outline-style: solid;
+  outline-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
 
 
 
 .clients-icon {
-  width: 44px;
-  height: 49px;
+
   fill: var(--svg-color);
+
+transition: fill 250ms var(--timing-function);
 }
 
 /* вторая страница PORTFOLIO */
@@ -542,6 +602,8 @@ background-position: center;
 
   background-color: var(--team-background-color);
   color: var(--secondary-text-color);
+
+  transition: all 250ms var(--timing-function);
 }
 
 .filters .filters-button:hover,
@@ -553,7 +615,7 @@ background-position: center;
   cursor: pointer;
 }
 /* Проекты projects  */
-/* Сетка портфолио */
+/*  портфолио */
 
 .unvisible-title {
   display: none;
@@ -568,6 +630,8 @@ background-position: center;
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+
+  transition: box-shadow 250ms var(--timing-function);
 }
 
 .portfolio-item:nth-child(3n) {
@@ -587,6 +651,44 @@ background-position: center;
 
 .portfolio-link {
   text-decoration: none;
+}
+
+/* Оверлей портфолио */
+
+.portfolio-image {
+  position: relative;
+
+  overflow: hidden;
+}
+
+.portfolio-tooltip {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translate(0, 100%);
+
+  margin: 0;
+  padding: 63px 24px;
+  width: 370px;
+  height: 294px;
+
+  background-color: rgba(33, 150, 243, 0.9);
+  color: var(--basic-background-color);
+
+  font-size: 18px;
+  line-height: 1.56;
+
+  transition: transform 250ms var(--timing-function),
+    opacity 250ms var(--timing-function);
+
+  opacity: 0;
+}
+
+.portfolio-link:hover .portfolio-tooltip,
+.portfolio-link:focus .portfolio-tooltip {
+  transform: translateY(0);
+
+  opacity: 1;
 }
 
 
@@ -629,6 +731,7 @@ background-position: center;
 
 
 
+
 /* Футер */
 
 .footer {
@@ -643,7 +746,7 @@ background-position: center;
 }
 
 .address {
-  width: calc((100% - 30px * 2) / 4);
+  width: 231px;
 }
 
 
@@ -680,6 +783,8 @@ background-position: center;
   text-decoration: none;
   
   color:var(--secondary-addressdown-color);
+
+  transition: color 250ms var(--timing-function);
 }
 
 .contacts-footer .link:last-child {
@@ -726,6 +831,8 @@ background-position: center;
   background-color: rgba(255, 255, 255, 0.1);
 
   border-radius: 50%;
+
+  transition: background-color 250ms var(--timing-function);
 }
 
 .network-link:hover,
@@ -741,8 +848,7 @@ background-position: center;
 .network-icon {
   width: 20px;
   height: 20px;
-
-  fill: var(--svg-color);
+  --color4: var(--logo-footer-color);
 } 
 
 .network-title {
@@ -756,6 +862,59 @@ background-position: center;
 
   color:var(--basic-background-color);
 }
+
+/* Модальное окно  */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+
+  transition: opacity 250ms var(--timing-function);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  min-width: 528px;
+  min-height: 580px;
+
+  background-color: var(--basic-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+  0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+
+  transition: transform 250ms var(--timing-function); 
+}
+
+.close {
+  position: absolute;
+  margin-top: 8px;
+  margin-right: 8px;
+  min-width: 30px;
+  min-height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  background-image: url(../images/close.svg);
+  cursor: pointer;
+  padding: 0;
+}
+
 
 
 
