--- a/css/styles.css
+++ b/css/styles.css
@@ -526,8 +526,6 @@ background-position: center;
 
   border: 1px solid var(--svg-color);
   border-radius: 4px;
-
-  transition: border-color 250ms var(--timing-function);
 }
 
 
@@ -544,6 +542,13 @@ background-position: center;
   align-items: center;
   width: 170px;
   height: 90px;
+  color: #afb1b8;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #afb1b8;
+  transition: color  250ms var(--timing-function),
+    border-color  250ms var(--timing-function);
+
 }
 
 .clients-item .clients-link:hover,
